# deeptown-bot

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/api/: guild_data.rs  mod.rs
src/bot/: mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/util/: mod.rs  web_errors.rs
