[package]
name = "deeptown-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
